--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
 
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
+  mobx: ^1.1.1
+  flutter_mobx: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -31,6 +33,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.8.0
+  mobx_codegen: ^1.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
