--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
 
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+3
+  sqflite: ^1.3.0
+  cached_network_image: ^2.0.0
+  connectivity: ^0.4.8+2
 
 
   # The following adds the Cupertino Icons font to your application.
