managing cars in server

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   assets:
     - assets/
     - assets/sql/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
