--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   sqflite: ^1.3.0
   cached_network_image: ^2.0.0
   connectivity: ^0.4.8+2
+  image_picker: ^0.6.5
 
 
   # The following adds the Cupertino Icons font to your application.
