--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cached_network_image: ^2.0.0
   connectivity: ^0.4.8+2
   image_picker: ^0.6.5
+  provider: ^4.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
