on long click, bottom sheet modal and share

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   connectivity: ^0.4.8+2
   image_picker: ^0.6.5
   provider: ^4.0.5
+  share: ^0.6.3+6
 
 
   # The following adds the Cupertino Icons font to your application.
