--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   image_picker: ^0.6.5
   provider: ^4.0.5
   share: ^0.6.3+6
+  url_launcher: ^5.4.2
+  video_player: ^0.10.8+1
+  google_maps_flutter: ^0.5.25+3
 
 
   # The following adds the Cupertino Icons font to your application.
