--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
   google_sign_in: ^4.4.1
+  cloud_firestore: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
