--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^0.4.4+3
   google_sign_in: ^4.4.1
   cloud_firestore: ^0.13.5
+  firebase_messaging: ^6.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
