--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^4.4.1
   cloud_firestore: ^0.13.5
   firebase_messaging: ^6.0.13
+  webview_flutter: ^0.3.21
 
 
   # The following adds the Cupertino Icons font to your application.
